Added chain task

--- a/FuturePromise3/FuturePromise3.vcxproj
+++ b/FuturePromise3/FuturePromise3.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Async.h" />
+    <ClInclude Include="Chain.h" />
     <ClInclude Include="Future.h" />
     <ClInclude Include="Promise.h" />
     <ClInclude Include="stdafx.h" />
