--- a/FuturePromise3/FuturePromise3.vcxproj.filters
+++ b/FuturePromise3/FuturePromise3.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Async.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Chain.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
